crates/lsharp-wasm/tests/snapshots/snapshot__wasm_multiple_functions.snap
---
source: crates/lsharp-wasm/tests/snapshot.rs
expression: dump
---
=== Wasm バイナリ構造 ===
バイナリサイズ: 2391 bytes
マジック: 00 61 73 6d
バージョン: 1

セクション数: 8
  [ 1] Type         141 bytes
  [ 2] Import       320 bytes
  [ 3] Function     20 bytes
  [ 5] Memory       3 bytes
  [ 6] Global       25 bytes
  [ 7] Export       110 bytes
  [10] Code         1738 bytes
  [11] Data         7 bytes
